Header is fixed on small sizes and changed the clip-path to make the scroll effect.

--- a/app/assets/scss/_base.scss
+++ b/app/assets/scss/_base.scss
@@ -1,7 +1,7 @@
 /*------Variables--------*/
 
-$main-bg: rgb(0, 0, 0);
-$clip-path-bg: hsl(133, 100%, 39%);
+$main-bg: hsl(133, 100%, 39%);
+$clip-path-bg: hsl(0, 0, 0);
 $cell-bg: hsl(44, 86%, 59%);
 $player-1-light: hsl(133, 100%, 39%);
 $player-1-dark: hsl(133, 100%, 11%);
